# sfems

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
resources/: .#adsf2.m  config.yaml  plot.plt
resources/graph/: fragmentShader.glsl  vertexShader.glsl
resources/ui/: fragmentShader.glsl  vertexShader.glsl
src/: main.cpp
src/calculations/: BeamElement.cpp  BeamElement.hpp  analyzer.cpp  analyzer.hpp  asdf.cpp  asdf.hpp  corotational.cpp  corotational.hpp  iterator.cpp  iterator.hpp  linear.cpp  linear.hpp  logger.cpp  logger.hpp  structure.cpp  structure.hpp
src/graphics/: curve.cpp  curve.hpp  graphics.cpp  graphics.hpp  shaderUtils.cpp  shaderUtils.hpp  ui.cpp  ui.hpp  window_util.c  window_util.h
src/utils/: arch.cpp  arch.hpp  clamp.c  clamp.h  fileUtils.cpp  fileUtils.hpp  logFunctions.cpp  logFunctions.hpp
